--- a/_posts/2019-04-29-Mesmer.md
+++ b/_posts/2019-04-29-Mesmer.md
@@ -41,7 +41,7 @@ author: "Nowrica"
       <div class='card'>
             <div class='card-content'>
               <span class='card-title grey'>장점</span>
-              <p>Quickness와 Alacrity를 영구적으로 제공</p> 
+              <p>Quickness와 Alacrity를 제공</p> 
               <p>강력한 CC 능력</p>
               <p>많은 회피와 블럭을 통한 탱킹</p>
             </div>
@@ -61,7 +61,7 @@ author: "Nowrica"
           <p>Berserker’s main hand sword</p>
           <p>Berserker’s shield and off-hand weapon</p>
             <div data-armory-embed="items" data-armory-ids="46774,72339"></div>
-            <div data-armory-embed="items" data-armory-ids="46670,24615,46774,24615"></div>
+            <div data-armory-embed="items" data-armory-ids="46770,24615,46774,24615"></div>
         <span class='card-title grey'>방어구</span>
           <p>Diviner’s Helm, Chest and Leggings</p>
           <p>Berserker’s Shoulders, Gloves &amp; Boots</p>
@@ -170,6 +170,65 @@ author: "Nowrica"
   </div>
 
   <div id='target3'>
+      <div class="col s12">
+        <div class='card'>
+              <div class='card-content'>
+                <span class='card-title grey'>장점</span>
+                <p>강력한 버스트 대미지</p> 
+                <p>높은 유틸성</p>
+              </div>
+             <div class='card-content'>
+               <span class='card-title grey'>단점</span>
+              <p>높은 학습 곡선</p>
+              <p>부족한 광역 공격</p>
+             </div>
+        </div>
+      </div>
+      <div id = "Aromor" class="col s6">
+        <div class='card'>
+          <div class='card-content'>
+           <span class='card-title grey'>무기</span>
+            <p>Full Berserker's</p>
+              <div data-armory-embed="items" data-armory-ids="46774,24615,46774,24868"></div>
+              <div data-armory-embed="items" data-armory-ids="46762,24615,24868"></div>
+          <span class='card-title grey'>방어구</span>
+            <p>Assasin's Helm Other Berserker's</p>
+              <div data-armory-embed="items" data-armory-ids="48135,48083,48079,48080,48082,48078"></div>
+              <div data-armory-embed="items" data-armory-ids="24836,24836,24836,24836,24836,24836"></div>
+          <span class='card-title grey'>장신구</span>
+          <p>Assain's Ring Other Berserker's</p>
+          <div data-armory-embed="items" data-armory-ids="79062,80002,77939" data-armory-79062-stat="584" data-armory-80002-stat="584" data-armory-77939-stat="584"></div>
+          <div data-armory-embed="items" data-armory-ids="79269,81167,79134" data-armory-79269-stat="584" data-armory-81167-stat="753" data-armory-79134-stat="753"></div>
+           </div> <!-- 장비끝 -->
+        </div>
+      </div>
+      <div id="traits" class="col s6"><!-- 특성 시작 -->
+        <div class='card'>
+          <div class='card-content'>
+            <span class='card-title grey'>기술</span>
+          <div data-armory-embed="skills" data-armory-ids="21750,30525,10211,10267,30359"></div>
+            <span class='card-title grey'>특성</span>
+          <div data-armory-embed="specializations" data-armory-ids="1,10,40" data-armory-1-traits="701,708,692" data-armory-10-traits="682,713,681" data-armory-40-traits="1995,2009,1890"></div>
+      </div> <!-- 특성 끝 -->
+      </div>
+      </div>
+       <div class="col s12">
+          <div class='card'>
+            <div class='card-tabs'>
+              <ul class='tabs tabs-fixed-width'>
+                <li class='tab'><a href='rotation2'>로테이션</a></li>
+              </ul>
+            </div>
+            <div class='card-content'>
+              <div id='rotation2'>
+                <div class='video-container'>
+                 <iframe width="560" height="315" src="" frameborder="0" allowfullscreen></iframe>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+  
   </div>
 
 </div> <!--row -->
