fix condi soulbeast add

--- a/_posts/2019-04-30-Ranger.md
+++ b/_posts/2019-04-30-Ranger.md
@@ -79,19 +79,19 @@ author: "Nowrica"
 
 
 
-<!-- 미라지 -->
+
   <div id="target2">
     <div class="col s12">
       <div class='card'>
             <div class='card-content'>
               <span class='card-title grey'>장점</span>
-              <p>Confusion, Torment를 쌓기 좋음</p> 
-              <p>높은 기동력, 우수한 닷지</p>
-              <p>특정 보스에 매우 효율적</p>
+              <p>낮은 학습 곡선</p> 
+              <p>높은 기동력</p>
+              <p>괜찮은 유틸성</p>
             </div>
            <div class='card-content'>
              <span class='card-title grey'>단점</span>
-            <p>높은 학습 곡선</p>
+            <p>부족한 광역 데미지</p>
             <p>초보자가 맞추기 힘든 장비</p>
             <p>대부분의 보스에서 효율이 낮음</p>
            </div>
@@ -102,12 +102,12 @@ author: "Nowrica"
         <div class='card-content'>
          <span class='card-title grey'>무기</span>
           <p>Full Viper</p>
-            <div data-armory-embed="items" data-armory-ids="77122,44950"></div>
-            <div data-armory-embed="items" data-armory-ids="72239,24607,76271,24607"></div>
+            <div data-armory-embed="items" data-armory-ids="74569,24605,24560"></div>
+            <div data-armory-embed="items" data-armory-ids="74569,24605,24560"></div>
         <span class='card-title grey'>방어구</span>
-          <p>Full Viper</p>
-            <div data-armory-embed="items" data-armory-ids="75770,73225,71436,73852,75378,74264"></div>
-            <div data-armory-embed="items" data-armory-ids="24848,24848,24848,24848,24848,24848"></div>
+          <p>Sinister's Helm, Other Viper</p>
+            <div data-armory-embed="items" data-armory-ids="67445,72259,76710,75626,70641,73854"></div>
+            <div data-armory-embed="items" data-armory-ids="24762,24762,24762,24762,24762,24762"></div>
         <span class='card-title grey'>장신구</span>
         <p>Full Viper</p>
         <div data-armory-embed="items" data-armory-ids="79062,80002,77939" data-armory-79062-stat="1130" data-armory-80002-stat="1130" data-armory-77939-stat="1130"></div>
@@ -119,9 +119,17 @@ author: "Nowrica"
       <div class='card'>
         <div class='card-content'>
           <span class='card-title grey'>기술</span>
-        <div data-armory-embed="skills" data-armory-ids="21750,10234,10232,41065,45449"></div>
-          <span class='card-title grey'>특성</span>
-        <div data-armory-embed="specializations" data-armory-ids="24,1,59" data-armory-24-traits="691,1690,733" data-armory-1-traits="700,1889,1950" data-armory-59-traits="2141,2098,2070"></div>
+        <div data-armory-embed="skills"
+          data-armory-ids="31914,40498,12496,12537,45717">
+        </div>
+              <span class='card-title grey'>특성</span>
+          <div data-armory-embed="specializations"
+            data-armory-ids="30,33,55"
+            data-armory-30-traits="1069,1846,1912"
+            data-armory-33-traits="1099,2032,1701"
+            data-armory-55-traits="2071,2161,2128"
+          >
+          </div>
     </div> <!-- 특성 끝 -->
     </div>
     </div>
@@ -135,7 +143,7 @@ author: "Nowrica"
           <div class='card-content'>
             <div id='rotation2'>
               <div class='video-container'>
-               <iframe width="560" height="315" src="" frameborder="0" allowfullscreen></iframe>
+               <iframe width="560" height="315" src="https://www.youtube.com/embed/b0pPsVfGqSM" frameborder="0" allowfullscreen></iframe>
               </div>
             </div>
           </div>
