add warrior and guardian

--- a/_posts/2019-04-30-Ranger.md
+++ b/_posts/2019-04-30-Ranger.md
@@ -157,11 +157,12 @@ author: "Nowrica"
               <div class='card-content'>
                 <span class='card-title grey'>장점</span>
                 <p>강력한 버스트 대미지</p> 
-                <p>높은 유틸성</p>
+                <p>괜찮은 유틸성</p>
+                <p>괜찮은 CC</p>
               </div>
              <div class='card-content'>
                <span class='card-title grey'>단점</span>
-              <p>높은 학습 곡선</p>
+              <p>중간 학습 곡선</p>
               <p>부족한 광역 공격</p>
              </div>
         </div>
@@ -171,16 +172,16 @@ author: "Nowrica"
           <div class='card-content'>
            <span class='card-title grey'>무기</span>
             <p>Full Berserker's</p>
-              <div data-armory-embed="items" data-armory-ids="46774,24615,46774,24868"></div>
+              <div data-armory-embed="items" data-armory-ids="46760,24615,46759,24868"></div>
               <div data-armory-embed="items" data-armory-ids="46762,24615,24868"></div>
           <span class='card-title grey'>방어구</span>
-            <p>Assasin's Helm Other Berserker's</p>
-              <div data-armory-embed="items" data-armory-ids="48135,48083,48079,48080,48082,48078"></div>
-              <div data-armory-embed="items" data-armory-ids="24836,24836,24836,24836,24836,24836"></div>
+            <p>Full Berserker's</p>
+              <div data-armory-embed="items" data-armory-ids="48087,48089,48085,48086,48088,48084"></div>
+              <div data-armory-embed="items" data-armory-ids="24818,24818,24818,24818,24818,24818"></div>
           <span class='card-title grey'>장신구</span>
-          <p>Assain's Ring Other Berserker's</p>
+          <p>Full Berserker's</p>
           <div data-armory-embed="items" data-armory-ids="79062,80002,77939" data-armory-79062-stat="584" data-armory-80002-stat="584" data-armory-77939-stat="584"></div>
-          <div data-armory-embed="items" data-armory-ids="79269,81167,79134" data-armory-79269-stat="584" data-armory-81167-stat="753" data-armory-79134-stat="753"></div>
+          <div data-armory-embed="items" data-armory-ids="79269,81167,79134" data-armory-79269-stat="584" data-armory-81167-stat="584" data-armory-79134-stat="584"></div>
            </div> <!-- 장비끝 -->
         </div>
       </div>
@@ -188,9 +189,9 @@ author: "Nowrica"
         <div class='card'>
           <div class='card-content'>
             <span class='card-title grey'>기술</span>
-          <div data-armory-embed="skills" data-armory-ids="21750,30525,10211,10267,30359"></div>
+          <div data-armory-embed="skills" data-armory-ids="31914,40498,12633,12491,45717"></div>
             <span class='card-title grey'>특성</span>
-          <div data-armory-embed="specializations" data-armory-ids="1,10,40" data-armory-1-traits="701,708,692" data-armory-10-traits="682,713,681" data-armory-40-traits="1995,2009,1890"></div>
+          <div data-armory-embed="specializations" data-armory-ids="32,8,55" data-armory-32-traits="1606,1047,1066" data-armory-8-traits="1014,1000,996" data-armory-55-traits="2071,2161,2143"></div>
       </div> <!-- 특성 끝 -->
       </div>
       </div>
@@ -204,7 +205,7 @@ author: "Nowrica"
             <div class='card-content'>
               <div id='rotation2'>
                 <div class='video-container'>
-                 <iframe width="560" height="315" src="" frameborder="0" allowfullscreen></iframe>
+                 <iframe width="560" height="315" src="https://www.youtube.com/embed/BupIpBs-eOQ" frameborder="0" allowfullscreen></iframe>
                 </div>
               </div>
             </div>
