add warrior and guardian

--- a/_posts/2019-05-02-Guardian.md
+++ b/_posts/2019-05-02-Guardian.md
@@ -26,7 +26,6 @@ author: "Nowrica"
 
 
 
-드
 <div class="row">
   <div class="col s12">
     <ul class="tabs">
@@ -41,14 +40,14 @@ author: "Nowrica"
       <div class='card'>
             <div class='card-content'>
               <span class='card-title grey'>장점</span>
-              <p>Banner를 제공</p> 
-              <p>강력한 CC 능력</p>
-              <p>컨디 버저커보다 나은 버스트 데미지</p>
+              <p>강력한 버스트 데미지</p> 
+              <p>괜찮은 CC 능력</p>
+              <p>괜찮은 유틸성</p>
             </div>
            <div class='card-content'>
              <span class='card-title grey'>단점</span>
-            <p>낮은 개인 dps</p>
-            <p>복잡한 dps 로테이션</p>
+            <p>스몰 사이즈 보스에게 낮은 dps</p>
+            <p>높은 retal 의존도</p>
            </div>
       </div>
     </div>
