--- a/_posts/2019-05-02-Warrior.md
+++ b/_posts/2019-05-02-Warrior.md
@@ -31,7 +31,7 @@ author: "Nowrica"
   <div class="col s12">
     <ul class="tabs">
       <li class="tab col s6"><a class="active" href="#target1">파워 워리어</a></li>
-      <li class="tab col s6"><a href="#target2">컨디 버저지</a></li>
+      <li class="tab col s6"><a href="#target2">컨디 버저커</a></li>
     </ul>
   </div>
 
